writ-compiler/tests/snapshots/lowering_tests__dlg_say_mixed_key_dispatch.snap
---
source: writ-compiler/tests/lowering_tests.rs
expression: ast
---
Ast {
    items: [
        Fn(
            AstFnDecl {
                attrs: [],
                vis: None,
                name: "convo",
                name_span: 4..9,
                generics: [],
                params: [
                    Regular(
                        AstParam {
                            name: "player",
                            name_span: 10..16,
                            ty: Named {
                                name: "Entity",
                                span: 18..24,
                            },
                            span: 10..24,
                        },
                    ),
                ],
                return_type: None,
                body: [
                    Expr {
                        expr: Call {
                            callee: Ident {
                                name: "say",
                                span: 28..48,
                            },
                            args: [
                                AstArg {
                                    name: None,
                                    value: Ident {
                                        name: "player",
                                        span: 29..35,
                                    },
                                    span: 28..48,
                                },
                                AstArg {
                                    name: None,
                                    value: StringLit {
                                        value: "Hello there.",
                                        span: 36..48,
                                    },
                                    span: 28..48,
                                },
                            ],
                            span: 28..48,
                        },
                        span: 28..48,
                    },
                    Expr {
                        expr: Call {
                            callee: Ident {
                                name: "say_localized",
                                span: 49..82,
                            },
                            args: [
                                AstArg {
                                    name: None,
                                    value: Ident {
                                        name: "player",
                                        span: 50..56,
                                    },
                                    span: 49..82,
                                },
                                AstArg {
                                    name: None,
                                    value: StringLit {
                                        value: "how_are_you",
                                        span: 49..82,
                                    },
                                    span: 49..82,
                                },
                                AstArg {
                                    name: None,
                                    value: StringLit {
                                        value: "How are you?",
                                        span: 57..69,
                                    },
                                    span: 49..82,
                                },
                            ],
                            span: 49..82,
                        },
                        span: 49..82,
                    },
                    Expr {
                        expr: Call {
                            callee: Ident {
                                name: "say",
                                span: 83..99,
                            },
                            args: [
                                AstArg {
                                    name: None,
                                    value: Ident {
                                        name: "player",
                                        span: 84..90,
                                    },
                                    span: 83..99,
                                },
                                AstArg {
                                    name: None,
                                    value: StringLit {
                                        value: "Goodbye.",
                                        span: 91..99,
                                    },
                                    span: 83..99,
                                },
                            ],
                            span: 83..99,
                        },
                        span: 83..99,
                    },
                ],
                span: 0..101,
            },
        ),
    ],
}
