writ-compiler/tests/snapshots/lowering_tests__dlg_speaker_scope_isolation_if_else.snap
---
source: writ-compiler/tests/lowering_tests.rs
expression: ast
---
Ast {
    items: [
        Fn(
            AstFnDecl {
                attrs: [],
                vis: None,
                name: "scene",
                name_span: 4..9,
                generics: [],
                params: [
                    Regular(
                        AstParam {
                            name: "player",
                            name_span: 10..16,
                            ty: Named {
                                name: "Entity",
                                span: 18..24,
                            },
                            span: 10..24,
                        },
                    ),
                ],
                return_type: None,
                body: [
                    Let {
                        mutable: false,
                        name: "_narrator",
                        name_span: 49..57,
                        ty: None,
                        value: GenericCall {
                            callee: MemberAccess {
                                object: Ident {
                                    name: "Entity",
                                    span: 49..57,
                                },
                                field: "getOrCreate",
                                field_span: 49..57,
                                span: 49..57,
                            },
                            type_args: [
                                Named {
                                    name: "Narrator",
                                    span: 49..57,
                                },
                            ],
                            args: [],
                            span: 49..57,
                        },
                        span: 49..57,
                    },
                    Expr {
                        expr: If {
                            condition: BoolLit {
                                value: true,
                                span: 41..45,
                            },
                            then_block: [
                                Expr {
                                    expr: Call {
                                        callee: Ident {
                                            name: "say",
                                            span: 48..67,
                                        },
                                        args: [
                                            AstArg {
                                                name: None,
                                                value: Ident {
                                                    name: "_narrator",
                                                    span: 49..57,
                                                },
                                                span: 48..67,
                                            },
                                            AstArg {
                                                name: None,
                                                value: StringLit {
                                                    value: "Branch A.",
                                                    span: 58..67,
                                                },
                                                span: 48..67,
                                            },
                                        ],
                                        span: 48..67,
                                    },
                                    span: 48..67,
                                },
                            ],
                            else_block: Some(
                                Block {
                                    stmts: [
                                        Expr {
                                            expr: Call {
                                                callee: Ident {
                                                    name: "say",
                                                    span: 77..87,
                                                },
                                                args: [
                                                    AstArg {
                                                        name: None,
                                                        value: Ident {
                                                            name: "player",
                                                            span: 29..35,
                                                        },
                                                        span: 77..87,
                                                    },
                                                    AstArg {
                                                        name: None,
                                                        value: StringLit {
                                                            value: "Else text.",
                                                            span: 77..87,
                                                        },
                                                        span: 77..87,
                                                    },
                                                ],
                                                span: 77..87,
                                            },
                                            span: 77..87,
                                        },
                                    ],
                                    span: 75..89,
                                },
                            ),
                            span: 41..89,
                        },
                        span: 41..89,
                    },
                ],
                span: 0..91,
            },
        ),
    ],
}
